--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&display=swap');
+
 :root {
   --bs-blue: #2937f0;
   --bs-indigo: #6610f2;
@@ -121,7 +124,14 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 h1, .h1 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
   font-size: calc(1.375rem + 1.5vw);
+}
+h2, .h2 {
+  font-family: "Phudu", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 @media (min-width: 1200px) {
   h1, .h1 {
